Upload current rewrite progress